feat: vue testing
