# itunes-proxy-api/src/controllers/interfaces/album-interfaces.ts
@@ -1,5 +1,6 @@
 export interface AlbumItem {
     albumName: string;
+    albumUrl: string;
     artistId: number;
     artistName: string;
     artworkUrl100: string;
